# embedding-tests

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  README.md  conftest.py  greptile.json  pyproject.toml
.beads/: README.md  issues.jsonl
.github/workflows/: lint-core.yml  quality-checks.yml  runtime-security.yml
configs/experiments/: code_retrieval.yaml  full_beir_benchmark.yaml  full_beir_large.yaml  full_benchmark.yaml  full_mteb.yaml  int8_test.yaml  multimodal.yaml  precision_comparison.yaml  quick_benchmark.yaml  quick_sanity.yaml  rag_chunking.yaml  rerankers.yaml  scientific_benchmark.yaml  standard_benchmark.yaml  technical_qa.yaml  test_beir_nfcorpus.yaml  text_embeddings.yaml
configs/hardware/: p40.yaml
configs/models/: kalm_embedding_gemma3_12b.yaml  llama_embed_nemotron_8b.yaml  octen_embedding_8b.yaml  qwen3_embedding_06b.yaml  qwen3_embedding_4b.yaml  qwen3_embedding_8b.yaml  qwen3_vl_embedding_2b.yaml  qwen3_vl_embedding_8b.yaml  qwen3_vl_reranker_2b.yaml  qwen3_vl_reranker_8b.yaml
docs/: metrics-interpretation-guide.md
src/embedding_tests/config/: beir_datasets.py  cache.py  coir_datasets.py  datasets.py  experiment.py  hardware.py  models.py  mteb_datasets.py  nanobeir_datasets.py
src/embedding_tests/evaluation/: metrics.py  mteb_runner.py  performance.py  rag_evaluator.py
src/embedding_tests/hardware/: compat.py  memory.py  precision.py
src/embedding_tests/models/: base.py  loader.py  st_wrapper.py  vl_embedding_wrapper.py  vl_reranker_wrapper.py
src/embedding_tests/pipeline/: chunking.py  embedding.py  rag.py  reranking.py  retrieval.py
src/embedding_tests/reporting/: collector.py  comparison.py  export.py
src/embedding_tests/runner/: checkpoint.py  cli.py  experiment.py
tests/: conftest.py
tests/fixtures/: sample_corpus.json  sample_queries.json
tests/integration/: conftest.py  test_embedding_pipeline.py  test_full_rag.py  test_model_loading.py  test_nanobeir_benchmark.py  test_reranking_pipeline.py
(+32 files in other folders)
